--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 
 *{
-    font-family: 'IBM Plex Sans', sans-serif;
-    color: #2f3030;
+    font-family: 'Yantramanav', sans-serif;
+    color: #DAFFEF;
+    background-color:black;
     
 
     
@@ -19,17 +20,15 @@ body{
 }
 
 .main-header{
+    font-family: 'ABeeZee', sans-serif;
     display:flex;
     flex-direction: row;
-    position:sticky;
-    position: -webkit-sticky; /*add other browsers styles*/
-    z-index:3;
-    top:0;
-    background:white;
+    
+
     width:100%;
-    height:45px;
+    
     margin:0;
-   color:white;
+   
    background-color:black; 
 }
 
@@ -37,23 +36,34 @@ body{
 .main-title{
     display: flex;
     width:20vw;
-    height:45px;
+    
     text-align:left;
     color:white;
-    margin:0 0 3em 0;    
+    margin:1%;    
     border:0;
     padding: 0 0 0 0.5em;         
     font-size: 36px;    
     font-weight:bolder;    
    
 }
+
 .main-title a{
     text-decoration: none;
     color:white;
 }
 
+.logo{
+    display:inline-block;
+    width:73px;
+    height:73px;
+}
 .inLineHeaderContainer {
-    width:80vw;
+    width:50vw;
+    display:flex;
+    position:sticky;
+    position: -webkit-sticky; /*add other browsers styles*/
+    z-index:3;
+    top:0;
      
 }
 
@@ -64,8 +74,8 @@ body{
     }
 
 .navbar-toggle {        
-    text-align:center;
-    text-justify: center;    
+    text-align:right;
+    text-justify: right;    
     cursor: pointer;     
     font-size: 36px;
     width:30%;    
@@ -141,7 +151,7 @@ body{
     padding:0;
     
        
-    background-color: whitesmoke;
+    
 }
 
 .container h1{
@@ -341,14 +351,19 @@ canvas{
     height: 100%;
 }
 
-#threejsBiggercontainer1 , #threejsBiggercontainer2, #threejsBiggercontainer3{
+#threejsBiggercontainer1 , #threejsBiggercontainer3{
     z-index:0;
     display: flex;
     flex-direction:column;       
     background-color: black;
-    height:60%;
+    
    
 
+}
+
+#threejsBiggercontainer2{
+    width:20vw;
+    height:20vh;
 }
 
 #threejscontainer1 ,#threejscontainer2, #threejscontainer3{
@@ -384,7 +399,7 @@ canvas{
     .sb{
         margin:1em 0 1em 0;
         width:60px;
-        height:60px;
+       
         font-size:35px;
 
     }
@@ -446,7 +461,7 @@ canvas{
  
 
     /*desktop settings*/
-  @media screen and (min-width: 770px) {
+  @media screen and (min-width: 800px) {
     
     
     .inLineHeaderContainer {
