--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,8 @@ a{
 
 .front-container h2{
     font-size:40px;
+    font-family: 'Chivo', serif;
+
 }
 
 
@@ -120,6 +122,7 @@ a{
     color:white;
     text-decoration:none;  
     font-size: 21px; 
+    font-weight:lighter;
     font-family: 'Chivo', sans-serif;
 
 
