fixed  threejs2 and threejs3layout and gui

--- a/css/main.css
+++ b/css/main.css
@@ -463,6 +463,7 @@ canvas{
 #symmetrycontainer1, #threejscontainer2 , #threejscontainer3{
     
     position:relative;
+    background-color: black;
     
 }
 
